# client-toolkit

./: .cirrus.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  aliases.js  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  update_keysyms.sh
.github/workflows/: ci.yml  docs.yml
calloop-wayland-source/: Cargo.toml  LICENSE.txt  README.md
calloop-wayland-source/src/: lib.rs
examples/: compositor_info.rs  data_device.rs  dialog.rs  dmabuf_formats.rs  egl.rs  foreign-toplevel-monitor.rs  generic_list_seats.rs  generic_simple_window.rs  image_copy_capture.rs  image_viewer.rs  image_viewporter.rs  kbd_input.rs  kbd_input_themed.rs  keyboard.rs  layer_shell.rs  layer_shell_wlr_module.rs  list_outputs.rs  list_seats.rs  list_shm_formats.rs  performance.rs  pointer_input.rs  pointer_theme_window.rs  relative_pointer.rs  selection.rs  session_lock.rs  simple.rs  simple_layer.rs  simple_window.rs  simple_window_udmabuf.rs  tablet.rs  tablet_input.rs  themed_frame.rs  themed_window.rs  wgpu.rs
search.desc/smithay_client_toolkit/: smithay_client_toolkit-desc-0-.js
search.index/: 005223f364.js  00dad3c30d.js  00e6e2e1ce.js  0103901b31.js  01055d4814.js  01081eb67c.js  011902ccdc.js  01779f6ac4.js  018fa5f509.js  01d6ad32e0.js  01e43c9a24.js  01fa1a7aaa.js  02aa76bb24.js  02b77ebd04.js  02cc7f0849.js  02e234e0dd.js  02e4292bb0.js  03128088c7.js  0332584fe7.js  0364e5c6e7.js  0393c73a60.js  03d7cec26b.js  03dcbfbf07.js  03f0529e82.js  03f7fbf374.js  0421ee92cb.js  0427ea7fe6.js  045e87d7f4.js  049b21d8fb.js  049dc4a2a9.js  04a8fd47de.js  04b60d81f7.js  04c3de2295.js  04cca90013.js  04dcedf76a.js  04dfe5fa50.js  052b569621.js  05307efdc2.js  0530f5fba1.js  0559ff264b.js  (+1023 more)
search.index/alias/: 79a7e8a920.js  984da4a9ab.js
search.index/crateNames/: cfa4c53c46.js
search.index/desc/: 1332cb15e8.js  24c44dacf1.js  8bd4581899.js
search.index/entry/: 42aad3c6e0.js  489aa0cad7.js  b388877752.js  e8c4339125.js
search.index/function/: 45c3036126.js  7d33ddc257.js  a5efad72ce.js
search.index/generic_inverted_index/: 0867f3e3b1.js  c2802f62b1.js  ec1113adb3.js
search.index/name/: 1096f77848.js  c9919b930f.js
search.index/normalizedName/: 55d8e4b369.js  b365230086.js
search.index/path/: 45c0ebca32.js  b9ad76a756.js
search.index/type/: 78f307ee28.js  c6c36861cc.js  ea69b88410.js
smithay_client_toolkit/: all.html  enum.DispatchError.html  fn.get_surface_outputs.html  fn.get_surface_scale_factor.html  index.html  macro.default_environment!.html  macro.default_environment.html  macro.delegate_activation.html  macro.delegate_compositor.html  macro.delegate_data_device.html  macro.delegate_data_device_manager!.html  macro.delegate_data_device_manager.html  macro.delegate_data_offer!.html  macro.delegate_data_offer.html  macro.delegate_data_source!.html  macro.delegate_data_source.html  macro.delegate_dispatch2.html  macro.delegate_dmabuf.html  macro.delegate_foreign_toplevel_list.html  macro.delegate_keyboard.html  macro.delegate_layer.html  macro.delegate_output.html  macro.delegate_pointer.html  macro.delegate_pointer_constraints.html  macro.delegate_presentation_time.html  macro.delegate_primary_selection.html  macro.delegate_registry.html  macro.delegate_relative_pointer.html  macro.delegate_seat.html  macro.delegate_session_lock.html  macro.delegate_shm.html  macro.delegate_simple.html  macro.delegate_subcompositor.html  macro.delegate_touch.html  macro.delegate_xdg_popup.html  macro.delegate_xdg_shell.html  macro.delegate_xdg_window.html  macro.environment!.html  macro.environment.html  macro.init_default_environment!.html  (+7 more)
smithay_client_toolkit/activation/: index.html  sidebar-items.js  struct.ActivationState.html  struct.RequestData.html  trait.ActivationHandler.html  trait.RequestDataExt.html
smithay_client_toolkit/background_effect/: index.html  sidebar-items.js  struct.BackgroundEffectState.html  trait.BackgroundEffectHandler.html
smithay_client_toolkit/compositor/: index.html  sidebar-items.js  struct.CompositorState.html  struct.FrameCallbackData.html  struct.Region.html  struct.Surface.html  struct.SurfaceData.html  trait.CompositorHandler.html  trait.SurfaceDataExt.html
smithay_client_toolkit/data_device/: enum.DataSourceEvent.html  enum.DndEvent.html  index.html  sidebar-items.js  struct.DataDevice.html  struct.DataDeviceHandler.html  struct.DataOffer.html  struct.DataSource.html  struct.DndAction.html  struct.ReadPipe.html  struct.WritePipe.html  trait.DataDeviceHandling.html  type.ReadPipeSource.html
smithay_client_toolkit/data_device_manager/: index.html  sidebar-items.js  struct.DataDeviceManagerState.html  struct.ReadPipe.html  struct.WritePipe.html
smithay_client_toolkit/dispatch2/: index.html  sidebar-items.js  trait.Dispatch2.html
smithay_client_toolkit/dmabuf/: index.html  struct.DmabufFeedback.html  struct.DmabufFeedbackTranche.html  struct.DmabufFormat.html  struct.DmabufParams.html  struct.DmabufState.html  trait.DmabufHandler.html
smithay_client_toolkit/environment/: index.html  sidebar-items.js  struct.Environment.html  trait.InnerEnv.html  (+3 more)
src/: activation.rs  background_effect.rs  calloop.rs  compositor.rs  dispatch2.rs  dmabuf.rs  env.rs  environment.rs  error.rs  event_loop.rs  foreign_toplevel_list.rs  globals.rs  idle.rs  lazy_global.rs  lib.rs  output.rs  presentation_time.rs  registry.rs  screencopy.rs  shm.rs  subcompositor.rs  surface.rs  viewporter.rs  virtual_keyboard.rs  workspace_manager.rs
(+3100 files in other folders)
